--- a/_colors.scss
+++ b/_colors.scss
@@ -41,7 +41,7 @@
         font-weight: 600;
         &:last-of-type {
             font-weight: 400;
-            color: $gray;
+            color: mix($gray, $dark, 90%);
         }
     }
 }
